Bug tracker at http://code.google.com/p/psutil/issues

0.2.1 - XXXX-XX-XX
------------------

NEW FEATURES

 * Issue 136: process executable path on FreeBSD is now determined by asking
   the kernel instead of guessing it from cmdline[0].
 * Issue 137: per-process real, effective and saved user and group ids.
 * Issue 140: system boot time.

BUGFIXES

 * Issue 83: process cmdline is empty on OSX 64-bit.
 * Issue 130: a race condition can cause IOError exception be raised on
   Linux if process disappears between open() and subsequent read() calls.

API CHANGES

 * Process "uid" and "gid" properties are deprecated in favor of "uids" and
   "gids" properties.


0.2.0 - 2010-11-13
------------------

NEW FEATURES

 * Issue 79: per-process open files.
 * Issue 88: total system physical cached memory.
 * Issue 88: total system physical memory buffers used by the kernel.
 * Issue 91: per-process send_signal() and terminate() methods.
 * Issue 95: NoSuchProcess and AccessDenied exception classes now provide "pid",
   "name" and "msg" attributes.
 * Issue 97: per-process children.
 * Issue 98: Process.get_cpu_times() and Process.get_memory_info now return
   a namedtuple instead of a tuple.
 * Issue 103: per-process opened TCP and UDP connections.
 * Issue 107: add support for Windows 64 bit. (patch by cjgohlke)
 * Issue 111: per-process executable name.
 * Issue 113: exception messages now include process name and pid.
 * Issue 114: process username Windows implementation has been rewritten in pure
   C and no longer uses WMI resulting in a big speedup. Also, pywin32 is no
   longer required as a third-party dependancy. (patch by wj32)
 * Issue 117: added support for Windows 2000.
 * Issue 123: psutil.cpu_percent() and psutil.Process.cpu_percent() accept a
   new 'interval' parameter.
 * Issue 129: per-process number of threads.

BUGFIXES

 * Issue 80: fixed warnings when installing psutil with easy_install.
 * Issue 81: psutil fails to compile with Visual Studio.